--- a/prepros.cfg
+++ b/prepros.cfg
@@ -4813,6 +4813,84 @@
           "imported": false,
           "parents": [],
           "type": "css"
+        },
+        "6aca3696": {
+          "id": "6aca3696",
+          "path": "img/blog-img2.jpg",
+          "output": "img/blog-img2.jpg",
+          "name": "blog-img2.jpg",
+          "category": "IMAGE",
+          "size": 12736,
+          "type": "jpg",
+          "initialSize": 12736,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "0d139db7": {
+          "id": "0d139db7",
+          "path": "img/blog-img3.jpg",
+          "output": "img/blog-img3.jpg",
+          "name": "blog-img3.jpg",
+          "category": "IMAGE",
+          "size": 10400,
+          "type": "jpg",
+          "initialSize": 10400,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "ac7229bb": {
+          "id": "ac7229bb",
+          "path": "img/blog-img4.jpg",
+          "output": "img/blog-img4.jpg",
+          "name": "blog-img4.jpg",
+          "category": "IMAGE",
+          "size": 35077,
+          "type": "jpg",
+          "initialSize": 35077,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "aa02878d": {
+          "id": "aa02878d",
+          "path": "img/blog-img5.jpg",
+          "output": "img/blog-img5.jpg",
+          "name": "blog-img5.jpg",
+          "category": "IMAGE",
+          "size": 17922,
+          "type": "jpg",
+          "initialSize": 17922,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "cb75d51a": {
+          "id": "cb75d51a",
+          "path": "img/blog-img6.jpg",
+          "output": "img/blog-img6.jpg",
+          "name": "blog-img6.jpg",
+          "category": "IMAGE",
+          "size": 8499,
+          "type": "jpg",
+          "initialSize": 8499,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "9696b182": {
+          "id": "9696b182",
+          "path": "img/contact-map.jpg",
+          "output": "img/contact-map.jpg",
+          "name": "contact-map.jpg",
+          "category": "IMAGE",
+          "size": 71259,
+          "type": "jpg",
+          "initialSize": 71259,
+          "optimized": false,
+          "height": 0,
+          "width": 0
         }
       },
       "deploymentHistory": {},
